[package]
name = "git-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
colored = "3.0.0"
inquire = "0.7.5"
keyring = { version = "3.6.3", features = ["linux-native", "sync-secret-service"] }
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
rusqlite = "0.37.0"
serde_json = "1.0.142"
thiserror = "2.0.16"
