[package]
name = "git-auth"
description = "A git credential helper that aims to integrate better with your git workflow"
version = "0.1.3"
edition = "2024"
repository = "https://github.com/CamLovell/git-auth"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["git"]
categories = ["command-line-utilities", "authentication"]

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
colored = "3.0.0"
inquire = "0.7.5"
keyring = { version = "3.6.3", features = ["linux-native", "sync-secret-service"] }
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
rusqlite = "0.37.0"
serde_json = "1.0.142"
thiserror = "2.0.16"
